0.1.2 xxxx-xx-xx
================

 * mulrev: Now allows non-scalar arguments and can compute two-output division
           (mulrevtopair no longer available)

Bugfixes
 * Compatibility with GNU Octave 4.0 (bug #43925)
 * Build problems with environment variables CCFLAGS, LDFLAGS
 * iscommoninterval: The decorated variant must return true for common
   intervals without com decoration.
 * eq: The decorated variant must not consider the decation value.
 * Several decorated functions: When evaluated on a subset of the function's
   domain, the result's decoration may be dac if the function's restriction to
   that subset is continuous.
 * Decorated boolean functions: Must return false when evaluated on NaI input.
 * Interval constructors: A PossibleUndefined warning must be issued if an
   interval is created from two very close decimal numbers (which can not be
   separated in the floating-point context) where the lower boundary is greater
   than the upper boundary.
 * cancelminus/cancelplus: The functions returned wrong results if the interval
   widths could not be compared in double-precision.
 * cos: Inaccuracy for x = [0]
 * pow: The function is now defined for x = 0 and y > 0.
 * All reverse operations: Now return a trivial decoration information at best,
   in conformance with IEEE 1788 (the only exception is mulrev).

0.1.1 2015-02-01
================

 * Increased speed of computation for large matrices
 
 * Improved performance for fma and dot
 
 * mpfr_vector_dot_d: Changed syntax for faster computation on intervals

 * Decorated versions of mtimes, mldivide, mpower, inv and reduction
   operations sum, dot, subabs, subsquare
 
 * Renamed function sumsquare to sumsq in accordance with GNU Octave function
   names
 
 * New function: fzero for finding all roots of an interval arithmetic function

Bugfixes
 * nextout: Function returned wrong results
 * exacttointerval: Now produces bare intervals instead of decorated intervals