@@ -21,8 +21,7 @@
 ## Sum of squares along dimension @var{DIM}.  If @var{DIM} is omitted,
 ## it defaults to the first non-singleton dimension.
 ##
-## Accuracy: The result is a nearly tight enclosure (within about 1.5 ULPs of
-## the exact result).
+## Accuracy: The result is a tight enclosure.
 ##
 ## @example
 ## @group
