@@ -3,6 +3,8 @@
 
  * mulrev: Now allows non-scalar arguments and can compute two-output division
            (mulrevtopair no longer available)
+ 
+ * Improved performance and accuracy of vector sums
 
 Bugfixes
  * Compatibility with GNU Octave 4.0 (bug #43925)
